--- a/package.json
+++ b/package.json
@@ -71,10 +71,11 @@
     "@vue/cli-service": "~4.5.9",
     "@vue/eslint-config-airbnb": "^5.3.0",
     "@vuepress/plugin-medium-zoom": "^1.7.1",
-    "babel-eslint": "^10.0.3",
-    "eslint": "6.8.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.21.0",
+    "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-vue": "6.2.2",
+    "eslint-plugin-vue": "^7.6.0",
     "sass": "^1.30.0",
     "sass-loader": "^10.1.0",
     "vue-template-compiler": "^2.6.11"
