--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "chart.js": "2.9.4",
     "core-js": "3.8.1",
     "echarts": "4.8.0",
+    "flatpickr": "^4.6.9",
     "jsonwebtoken": "8.5.1",
     "leaflet": "1.6.0",
     "portal-vue": "2.1.7",
@@ -43,6 +44,8 @@
     "vue-clipboard2": "0.3.1",
     "vue-context": "6.0.0",
     "vue-echarts": "5.0.0-beta.0",
+    "vue-excel-export": "^0.1.3",
+    "vue-excel-xlsx": "^1.0.11",
     "vue-feather-icons": "5.1.0",
     "vue-flatpickr-component": "8.1.6",
     "vue-form-wizard": "0.8.4",
@@ -61,7 +64,8 @@
     "vue-tree-halower": "1.8.3",
     "vue2-leaflet": "2.5.2",
     "vuedraggable": "2.24.3",
-    "vuex": "3.6.0"
+    "vuex": "3.6.0",
+    "xlsx": "^0.16.9"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.9",
