--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "vue-good-table": "2.21.0",
     "vue-i18n": "8.22.2",
     "vue-perfect-scrollbar": "0.2.1",
+    "vue-print-nb": "^1.6.0",
     "vue-prism-component": "1.1.1",
     "vue-quill-editor": "3.0.6",
     "vue-ripple-directive": "2.0.1",
