--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "vue-flatpickr-component": "8.1.6",
     "vue-form-wizard": "0.8.4",
     "vue-good-table": "2.21.0",
+    "vue-html-to-paper": "^1.3.1",
     "vue-i18n": "8.22.2",
     "vue-perfect-scrollbar": "0.2.1",
     "vue-print-nb": "^1.6.0",
