--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@vueuse/core": "4.0.0",
     "animate.css": "4.1.1",
     "apexcharts": "3.23.0",
+    "autoprefixer": "^9.8.6",
     "axios": "0.21.1",
     "axios-mock-adapter": "1.19.0",
     "bootstrap": "4.5.2",
