--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "core-js": "3.8.1",
     "echarts": "4.8.0",
     "flatpickr": "^4.6.9",
+    "html2canvas": "^1.0.0-rc.7",
+    "html2pdf.js": "^0.9.2",
     "jsonwebtoken": "8.5.1",
+    "jspdf": "^2.3.1",
     "leaflet": "1.6.0",
     "portal-vue": "2.1.7",
     "postcss-rtl": "1.7.3",
@@ -51,6 +54,7 @@
     "vue-form-wizard": "0.8.4",
     "vue-good-table": "2.21.0",
     "vue-html-to-paper": "^1.3.1",
+    "vue-html2pdf": "^1.8.0",
     "vue-i18n": "8.22.2",
     "vue-perfect-scrollbar": "0.2.1",
     "vue-print-nb": "^1.6.0",
