--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "swiper": "5.4.5",
     "uuid": "8.3.2",
     "vee-validate": "3.4.5",
-    "vue": "2.6.12",
+    "vue": "^2.6.12",
     "vue-apexcharts": "1.6.0",
     "vue-autosuggest": "2.2.0",
     "vue-awesome-swiper": "4.1.1",
@@ -83,7 +83,7 @@
     "@vue/eslint-config-airbnb": "^5.3.0",
     "@vuepress/plugin-medium-zoom": "^1.7.1",
     "babel-eslint": "^10.1.0",
-    "eslint": "^7.22.0",
+    "eslint": "^7.26.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-vue": "^7.7.0",
