--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "vue-cleave-component": "2.1.3",
     "vue-clipboard2": "0.3.1",
     "vue-context": "6.0.0",
+    "vue-easy-printer": "^1.0.6",
     "vue-echarts": "5.0.0-beta.0",
     "vue-excel-export": "^0.1.3",
     "vue-excel-xlsx": "^1.0.11",
@@ -59,7 +60,7 @@
     "vue-html2pdf": "^1.8.0",
     "vue-i18n": "8.22.2",
     "vue-perfect-scrollbar": "0.2.1",
-    "vue-print-nb": "^1.6.0",
+    "vue-print-nb": "^1.7.5",
     "vue-prism-component": "1.1.1",
     "vue-quill-editor": "3.0.6",
     "vue-ripple-directive": "2.0.1",
