--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "vue-print-nb": "^1.7.5",
     "vue-prism-component": "1.1.1",
     "vue-quill-editor": "3.0.6",
+    "vue-resource": "^1.5.3",
     "vue-ripple-directive": "2.0.1",
     "vue-router": "3.4.9",
     "vue-select": "3.11.2",
