--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "vue2-leaflet": "2.5.2",
     "vuedraggable": "2.24.3",
     "vuex": "3.6.0",
+    "vuex-persistedstate": "^4.1.0",
     "xlsx": "^0.16.9"
   },
   "devDependencies": {
