--- a/nginx.conf
+++ b/nginx.conf
@@ -16,6 +16,10 @@ http {
   keepalive_timeout  65;
   server {
     listen       80;
+    listen      443 ssl;
+    if ($scheme = http) {
+      return 301 https://$server_name$request_uri;
+    }
     server_name  localhost;
     location / {
       root   /app;
