--- a/nginx.conf
+++ b/nginx.conf
@@ -6,6 +6,14 @@ events {
   worker_connections  1024;
 }
 http {
+
+  map $http_origin $allow_origin {
+      ~^http://(www\.)?example.com$ $http_origin;
+  }
+  map $http_origin $allow_methods {
+      ~^http://(www\.)?example.com$ "OPTIONS, HEAD, GET";
+  }
+
   include       /etc/nginx/mime.types;
   default_type  application/octet-stream;
   log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
@@ -16,14 +24,23 @@ http {
   keepalive_timeout  65;
   server {
     listen       80;
-    if ($scheme = http) {
-      return 301 https://$server_name$request_uri;
-    }
+    # if ($scheme = http) {
+    #   return 301 https://$server_name$request_uri;
+    # }
     server_name  localhost;
     location / {
       root   /app;
       index  index.html;
       try_files $uri $uri/ /index.html;
+      add_header Access-Control-Allow-Origin $allow_origin;
+      add_header Access-Control-Allow-Methods $allow_methods;
+
+      # Handling preflight requests
+      if ($request_method = OPTIONS) {
+          add_header Content-Type text/plain;
+          add_header Content-Length 0;
+          return 204;
+      }
     }
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
