--- a/nginx.conf
+++ b/nginx.conf
@@ -24,9 +24,14 @@ http {
   keepalive_timeout  65;
   server {
     listen       80;
-    # if ($scheme = http) {
-    #   return 301 https://$server_name$request_uri;
-    # }
+    listen 443;
+    ssl on;
+    ssl_certificate /etc/nginx/re-base.crt;
+    ssl_certificate_key /etc/nginx/re-base.key;
+    server_name re-base.ru;
+    if ($scheme = http) {
+      return 301 https://$server_name$request_uri;
+    }
     server_name  localhost;
     location / {
       root   /app;
