--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,14 @@ services:
     build: .
     ports:
       - 80:80
-    restart: on-failure
+    restart: always
     volumes:
       - api:/usr/src/lk-app/
     networks:
       - network_service
+volumes:
+  api:
+
+networks:
+  network_service:
+    driver: bridge
