--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,8 @@ jobs:
         command: |
           cd /root/Dev/card-balance
           git pull
-          docker-compose up --build -d
+          docker-compose build --no-cache &&
+          docker-compose up -d --force-recreat
         host: ${{ secrets.REMOTE_HOST }}
         user: root
         pass: ${{ secrets.SERVER_ROOT_PASSWORD}}
