--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
             cd /root/Dev/card-balance
             git pull
             docker-compose build --no-cache &&
-            docker-compose up -d --force-recreat
+            docker-compose up -d --force-recreatе
           host: ${{ secrets.REMOTE_HOST }}
           user: root
           pass: ${{ secrets.SERVER_ROOT_PASSWORD}}
