--- a/nginx.conf
+++ b/nginx.conf
@@ -1,47 +1,34 @@
-user  nginx;
-worker_processes  1;
-error_log  /var/log/nginx/error.log warn;
-pid        /var/run/nginx.pid;
-events {
-  worker_connections  1024;
-}
-http {
+server {
+    listen 80;
+    server_name xn--e1aybc.xn--80aagg0ac7bbh.xn--p1ai;
+    server_tokens off;
 
-  map $http_origin $allow_origin {
-      ~^http://(www\.)?example.com$ $http_origin;
-  }
-  map $http_origin $allow_methods {
-      ~^http://(www\.)?example.com$ "OPTIONS, HEAD, GET";
-  }
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
 
-  include       /etc/nginx/mime.types;
-  default_type  application/octet-stream;
-  log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-                    '$status $body_bytes_sent "$http_referer" '
-                    '"$http_user_agent" "$http_x_forwarded_for"';
-  access_log  /var/log/nginx/access.log  main;
-  sendfile        on;
-  keepalive_timeout  65;
-  server {
-    listen       80;
-    server_name  localhost;
     location / {
-      root   /app;
-      index  index.html;
-      try_files $uri $uri/ /index.html;
-      add_header Access-Control-Allow-Origin $allow_origin;
-      add_header Access-Control-Allow-Methods $allow_methods;
+        return 301 https://$host$request_uri;
+    }
+}
 
-      # Handling preflight requests
-      if ($request_method = OPTIONS) {
-          add_header Content-Type text/plain;
-          add_header Content-Length 0;
-          return 204;
-      }
+server {
+    listen 443 ssl;
+    server_name xn--e1aybc.xn--80aagg0ac7bbh.xn--p1ai;
+    server_tokens off;
+
+    ssl_certificate /etc/letsencrypt/live/xn--e1aybc.xn--80aagg0ac7bbh.xn--p1ai/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/xn--e1aybc.xn--80aagg0ac7bbh.xn--p1ai/privkey.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
+    location / {
+        proxy_pass  http://xn--e1aybc.xn--80aagg0ac7bbh.xn--p1ai;
+        proxy_set_header    Host                $http_host;
+        proxy_set_header    X-Real-IP           $remote_addr;
+        proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
+        root   /app;
+        index  index.html;
+        try_files $uri $uri/ /index.html;
     }
-    error_page   500 502 503 504  /50x.html;
-    location = /50x.html {
-      root   /usr/share/nginx/html;
-    }
-  }
 }
